RESOLVED FIXED145140
REGRESSION(142590): Scroll-snap points are improperly snapping to earlier index values
https://bugs.webkit.org/show_bug.cgi?id=145140
Summary REGRESSION(142590): Scroll-snap points are improperly snapping to earlier ind...
Brent Fulgham
Reported 2015-05-18 14:18:52 PDT
My fix in Bug 142590 for resizing events introduced a snapping logic bug that causes some scroll-snap gestures to trigger the "nearestActiveSnapPoint" logic, throwing the scroll position back to the previous snap point. This must be fixed!
Attachments
Patch (5.49 KB, patch)
2015-05-18 14:56 PDT, Brent Fulgham
bdakin: review+
Brent Fulgham
Comment 1 2015-05-18 14:35:56 PDT
The new "nearestActiveSnapPoint" logic is firing while scroll snap animations are running. We need to add an "isScrollSnapInProgress" predicate, much like the existing "isRubberBandInProgress" to avoid certain "fix-up" logic that we don't want running while we are in the process of moving to a new position.
Brent Fulgham
Comment 2 2015-05-18 14:55:53 PDT
Brent Fulgham
Comment 3 2015-05-18 14:56:33 PDT
Beth Dakin
Comment 4 2015-05-18 14:58:37 PDT
Comment on attachment 253345 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=253345&action=review > Source/WebCore/platform/mac/ScrollAnimatorMac.h:135 > + bool isRubberBandInProgress() const override; Did you mean to remove the "virtual" from isRubberBandInProgress()?
Brent Fulgham
Comment 5 2015-05-18 14:59:52 PDT
(In reply to comment #4) > Comment on attachment 253345 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=253345&action=review > > > Source/WebCore/platform/mac/ScrollAnimatorMac.h:135 > > + bool isRubberBandInProgress() const override; > > Did you mean to remove the "virtual" from isRubberBandInProgress()? I just switched to the new 'override' style guideline, where we don't also leave the 'virtual' declaration (it's implied by the 'override' keyword).
Brent Fulgham
Comment 6 2015-05-18 15:01:27 PDT
Note You need to log in before you can comment on or make changes to this bug.